[package]
name = "atomic-primitive"
version = "0.1.0"
edition = "2024"
description = "Traits for primitive atomic types"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
authors = [ "Sebastiano Vigna <sebastiano.vigna@unimi.it>" ]
keywords = ["generic", "atomic", "primitive"]
categories = ["no-std", "rust-patterns", "traits"]
rust-version = "1.85"

[features]
default = []
